syntax = "proto3";
package stride.stakeibc;
import "cosmos_proto/cosmos.proto";
import "gogoproto/gogo.proto";
option go_package = "github.com/Stride-Labs/stride/x/stakeibc/types";

message AddValidatorProposal {
  option (gogoproto.equal) = true;
  option (gogoproto.goproto_getters) = false;
  option (gogoproto.goproto_stringer) = false;

  string title = 1;
  string description = 2;
  string host_zone = 3;
  string validator_name = 4;
  string validator_address = 5 [ (cosmos_proto.scalar) = "cosmos.AddressString" ];
}